Them cac rang buoc giua cac entity One to One, One to Many,... Thay doi khoa chinh cua UserProfile thanh MSSV de de quan li hon. Test case dang thuc hien...